--- a/src/main/resources/view/UpdateStatus.fxml
+++ b/src/main/resources/view/UpdateStatus.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="454.0" prefWidth="683.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UpdateStatusController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="728.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.UpdateStatusController">
    <center>
       <GridPane prefHeight="435.0" prefWidth="623.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -51,6 +50,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label text="OrderId:">
@@ -63,19 +63,25 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label layoutX="10.0" layoutY="153.0" text="Status:" GridPane.rowIndex="2">
+                  <Label layoutX="10.0" layoutY="153.0" text="Status:" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <JFXTextField GridPane.columnIndex="1" />
-                  <JFXTextField layoutX="131.0" layoutY="50.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <JFXTextField layoutX="131.0" layoutY="154.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <JFXButton prefHeight="13.0" prefWidth="83.0" style="-fx-background-color: #00d084;" text="Search" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                  <JFXTextField fx:id="idTxt" GridPane.columnIndex="1" />
+                  <JFXTextField fx:id="codeTxt" layoutX="131.0" layoutY="50.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <JFXTextField fx:id="statusTxt" layoutX="131.0" layoutY="154.0" GridPane.columnIndex="1" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                  <JFXButton onAction="#searchBtnOnAction" prefHeight="13.0" prefWidth="83.0" style="-fx-background-color: #00d084;" text="Search" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </JFXButton>
+                  <Label layoutX="10.0" layoutY="307.0" text="Date:" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <JFXTextField fx:id="dateTxt" layoutX="131.0" layoutY="160.0" GridPane.columnIndex="1" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
             <JFXButton prefHeight="30.0" prefWidth="122.0" style="-fx-background-color: #9575cd;" text="Update Status" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
