--- a/src/main/resources/view/PlaceOrderForm.fxml
+++ b/src/main/resources/view/PlaceOrderForm.fxml
@@ -61,7 +61,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Order ID:" GridPane.columnIndex="1" GridPane.halignment="LEFT">
+                  <Label text="Order ID:" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="TOP">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -130,7 +130,17 @@
                         <Insets right="6.0" />
                      </GridPane.margin>
                   </JFXButton>
-                  <Label fx:id="lblOrderId" prefHeight="27.0" prefWidth="133.0" text="Label" GridPane.columnIndex="2">
+                  <Label fx:id="lblOrderId" prefHeight="27.0" prefWidth="133.0" text="Label" GridPane.columnIndex="2" GridPane.valignment="TOP">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="128.0" layoutY="10.0" text="Customer ID:" GridPane.columnIndex="1" GridPane.valignment="BOTTOM">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblCustId" layoutX="309.0" layoutY="10.0" prefHeight="27.0" prefWidth="133.0" text="Label" GridPane.columnIndex="2" GridPane.valignment="BOTTOM">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
