--- a/src/main/resources/view/AddParts.fxml
+++ b/src/main/resources/view/AddParts.fxml
@@ -78,22 +78,22 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <JFXButton prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #37d67a;" text="Add" textFill="WHITE" GridPane.columnIndex="9" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
+                  <JFXButton fx:id="addbtn" onAction="#addbtnOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #37d67a;" text="Add" textFill="WHITE" GridPane.columnIndex="9" GridPane.halignment="RIGHT" GridPane.rowIndex="1" GridPane.valignment="TOP">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </JFXButton>
-                  <JFXTextField GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                  <JFXTextField layoutX="52.0" layoutY="64.0" GridPane.columnIndex="3" GridPane.rowIndex="1" GridPane.valignment="TOP" />
-                  <JFXTextField layoutX="162.0" layoutY="64.0" GridPane.columnIndex="5" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                  <JFXTextField fx:id="nametxt" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                  <JFXTextField fx:id="qtyTxt" layoutX="52.0" layoutY="64.0" GridPane.columnIndex="3" GridPane.rowIndex="1" GridPane.valignment="TOP" />
+                  <JFXTextField fx:id="unitPriceTxt" layoutX="162.0" layoutY="64.0" GridPane.columnIndex="5" GridPane.rowIndex="1" GridPane.valignment="TOP" />
                </children>
             </GridPane>
-            <JFXTreeTableView GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <JFXTreeTableView fx:id="partsTbl" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <columns>
-                  <TreeTableColumn prefWidth="140.0" text="ID" />
-                  <TreeTableColumn prefWidth="242.0" text="Part Name" />
-                  <TreeTableColumn prefWidth="174.0" text="QTY" />
-                  <TreeTableColumn prefWidth="197.0" text="Amount" />
+                  <TreeTableColumn fx:id="colID" prefWidth="140.0" text="ID" />
+                  <TreeTableColumn fx:id="colName" prefWidth="242.0" text="Part Name" />
+                  <TreeTableColumn fx:id="colQty" prefWidth="174.0" text="QTY" />
+                  <TreeTableColumn fx:id="colAmount" prefWidth="197.0" text="Amount" />
                </columns>
             </JFXTreeTableView>
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4">
@@ -111,7 +111,7 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label text="000.00">
+                  <Label fx:id="lblTotal" text="000.00">
                      <GridPane.margin>
                         <Insets left="60.0" />
                      </GridPane.margin>
@@ -119,7 +119,7 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <JFXButton prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #9575cd;" text="Confirm" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
+                  <JFXButton fx:id="confirmBtn" onAction="#confirmBtnOnAction" prefHeight="30.0" prefWidth="90.0" style="-fx-background-color: #9575cd;" text="Confirm" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="RIGHT">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
