--- a/src/main/resources/view/OrderBillForm.fxml
+++ b/src/main/resources/view/OrderBillForm.fxml
@@ -2,10 +2,8 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TreeTableColumn?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -25,9 +23,8 @@
         <rowConstraints>
           <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="127.0" minHeight="10.0" prefHeight="84.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="384.0" minHeight="10.0" prefHeight="305.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="204.0" minHeight="10.0" prefHeight="79.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="298.0" minHeight="10.0" prefHeight="298.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="204.0" minHeight="10.0" prefHeight="101.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <JFXButton fx:id="backButton" contentDisplay="GRAPHIC_ONLY" onAction="#backButtonOnAction" prefHeight="42.0" prefWidth="52.0">
@@ -44,15 +41,7 @@
                   <Font name="System Bold" size="30.0" />
                </font>
             </Label>
-            <JFXTreeTableView GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <columns>
-                  <TreeTableColumn prefWidth="140.0" text="ID" />
-                  <TreeTableColumn prefWidth="242.0" text="Part Name" />
-                  <TreeTableColumn prefWidth="174.0" text="QTY" />
-                  <TreeTableColumn prefWidth="197.0" text="Amount" />
-               </columns>
-            </JFXTreeTableView>
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="3">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -101,6 +90,8 @@
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label text="OrderId">
@@ -108,17 +99,42 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label text="Reapair cost :" GridPane.rowIndex="1">
+                  <Label text="Reapair cost :" GridPane.rowIndex="3">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label text="ODR0000" GridPane.columnIndex="1">
+                  <Label fx:id="lblOrderId" text="ODR0000" GridPane.columnIndex="1">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <JFXTextField fx:id="repairCostTxt" maxWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <JFXTextField fx:id="repairCostTxt" maxWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label layoutX="10.0" layoutY="29.0" text="ItemCode" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="134.0" layoutY="29.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblItemCode" layoutX="134.0" layoutY="29.0" prefHeight="27.0" prefWidth="110.0" text="E" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="109.0" text="PartsCost" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblPartCost" layoutX="134.0" layoutY="109.0" prefHeight="27.0" prefWidth="110.0" text="000.00" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
                </children>
             </GridPane>
          </children>
